# movie-torrent-bot

./: .gitignore  Makefile  logging.cfg  movies_search.py  pyproject.toml  server.py
bot/: bot.py  constants.py  keyboards.py  messages.py
